@@ -65,16 +65,23 @@
 #define RTLD_GLOBAL (0)
 #endif
 static int (*alsa_pcm_subformat_mask_malloc)(snd_pcm_subformat_mask_t **);
-static int (*alsa_pcm_hw_params_any)(snd_pcm_t *, snd_pcm_hw_params_t *);
-static int (*alsa_pcm_get_params)(snd_pcm_t *, snd_pcm_uframes_t *, snd_pcm_uframes_t *);
 static const char * (*alsa_strerror)(int);
 static int (*alsa_pcm_resume)(snd_pcm_t *);
 static int (*alsa_pcm_prepare)(snd_pcm_t *);
+static int (*alsa_pcm_hw_params_any)(snd_pcm_t *, snd_pcm_hw_params_t *);
+static int (*alsa_pcm_hw_params)(snd_pcm_t *, snd_pcm_hw_params_t *);
+static int (*alsa_pcm_hw_params_current)(snd_pcm_t *, snd_pcm_hw_params_t *);
+static int (*alsa_pcm_hw_params_set_access)(snd_pcm_t *, snd_pcm_hw_params_t *, snd_pcm_access_t);
+static int (*alsa_pcm_hw_params_set_format)(snd_pcm_t *, snd_pcm_hw_params_t *, snd_pcm_format_t);
+static int (*alsa_pcm_hw_params_set_rate_near)(snd_pcm_t *, snd_pcm_hw_params_t *, unsigned int *, int *);
+static int (*alsa_pcm_hw_params_set_channels_near)(snd_pcm_t *, snd_pcm_hw_params_t *, unsigned int *);
+static int (*alsa_pcm_hw_params_set_buffer_time_near)(snd_pcm_t *, snd_pcm_hw_params_t *, unsigned int *, int *);
+static int (*alsa_pcm_hw_params_set_period_time_near)(snd_pcm_t *, snd_pcm_hw_params_t *, unsigned int *, int *);
+static int (*alsa_pcm_hw_params_get_buffer_size)(const snd_pcm_hw_params_t *, snd_pcm_uframes_t *);
+static int (*alsa_pcm_hw_params_get_period_size)(const snd_pcm_hw_params_t *, snd_pcm_uframes_t *, int *);
 static int (*alsa_pcm_sw_params_sizeof)(void);
 static int (*alsa_pcm_hw_params_sizeof)(void);
-static int(*alsa_pcm_open)(snd_pcm_t**, const char *, int, int);
-static int (*alsa_pcm_set_params)(snd_pcm_t *, snd_pcm_format_t, snd_pcm_access_t,
-				  unsigned int, unsigned int, int, unsigned int);
+static int (*alsa_pcm_open)(snd_pcm_t**, const char *, int, int);
 static int (*alsa_pcm_close)(snd_pcm_t*);
 static int (*alsa_pcm_drain)(snd_pcm_t*);
 static int (*alsa_pcm_drop)(snd_pcm_t*);
@@ -87,9 +94,17 @@ static void* libasound = NULL;
 /* compile-time link with libasound */
 #define alsa_pcm_subformat_mask_malloc		snd_pcm_subformat_mask_malloc
 #define alsa_strerror				snd_strerror
-#define alsa_pcm_get_params			snd_pcm_get_params
 #define alsa_pcm_hw_params_any			snd_pcm_hw_params_any
-#define alsa_pcm_set_params			snd_pcm_set_params
+#define alsa_pcm_hw_params			snd_pcm_hw_params
+#define alsa_pcm_hw_params_current		snd_pcm_hw_params_current
+#define alsa_pcm_hw_params_set_access		snd_pcm_hw_params_set_access
+#define alsa_pcm_hw_params_set_format		snd_pcm_hw_params_set_format
+#define alsa_pcm_hw_params_set_rate_near	snd_pcm_hw_params_set_rate_near
+#define alsa_pcm_hw_params_set_channels_near	snd_pcm_hw_params_set_channels_near
+#define alsa_pcm_hw_params_set_buffer_time_near	snd_pcm_hw_params_set_buffer_time_near
+#define alsa_pcm_hw_params_set_period_time_near	snd_pcm_hw_params_set_period_time_near
+#define alsa_pcm_hw_params_get_buffer_size	snd_pcm_hw_params_get_buffer_size
+#define alsa_pcm_hw_params_get_period_size	snd_pcm_hw_params_get_period_size
 #define alsa_pcm_resume				snd_pcm_resume
 #define alsa_pcm_prepare			snd_pcm_prepare
 #define alsa_pcm_close				snd_pcm_close
@@ -100,6 +115,14 @@ static void* libasound = NULL;
 #define alsa_pcm_writei				snd_pcm_writei
 #endif /* MIKMOD_DYNAMIC */
 
+#if defined(MIKMOD_DEBUG)
+# define dbgprint			fprintf
+#elif defined (__GNUC__) && !(defined(__STDC_VERSION__) && __STDC_VERSION__ >= 199901L)
+# define dbgprint(f, fmt, args...)	do {} while (0)
+#else
+# define dbgprint(f, ...)		do {} while (0)
+#endif
+static BOOL enabled = 0;
 static snd_pcm_t *pcm_h = NULL;
 static SBYTE *audiobuffer = NULL;
 static snd_pcm_sframes_t period_size;
@@ -127,12 +150,28 @@ static int ALSA_Link(void)
 						 dlsym(libasound,"snd_pcm_hw_params_sizeof"))) return 1;
 	if (!(alsa_pcm_resume = (int (*)(snd_pcm_t *))
 						 dlsym(libasound,"snd_pcm_resume"))) return 1;
-	if (!(alsa_pcm_get_params = (int (*)(snd_pcm_t *, snd_pcm_uframes_t *, snd_pcm_uframes_t *))
-						 dlsym(libasound,"snd_pcm_get_params"))) return 1;
 	if (!(alsa_pcm_hw_params_any = (int (*)(snd_pcm_t *, snd_pcm_hw_params_t *))
 						 dlsym(libasound,"snd_pcm_hw_params_any"))) return 1;
-	if (!(alsa_pcm_set_params = (int (*)(snd_pcm_t *, snd_pcm_format_t, snd_pcm_access_t, unsigned int, unsigned int, int, unsigned int))
-						 dlsym(libasound,"snd_pcm_set_params"))) return 1;
+	if (!(alsa_pcm_hw_params = (int (*)(snd_pcm_t *, snd_pcm_hw_params_t *))
+						 dlsym(libasound,"snd_pcm_hw_params"))) return 1;
+	if (!(alsa_pcm_hw_params_current = (int (*)(snd_pcm_t *, snd_pcm_hw_params_t *))
+						 dlsym(libasound,"snd_pcm_hw_params_current"))) return 1;
+	if (!(alsa_pcm_hw_params_set_access = (int (*)(snd_pcm_t *, snd_pcm_hw_params_t *, snd_pcm_access_t))
+						 dlsym(libasound,"snd_pcm_hw_params_set_access"))) return 1;
+	if (!(alsa_pcm_hw_params_set_format = (int (*)(snd_pcm_t *, snd_pcm_hw_params_t *, snd_pcm_format_t))
+						 dlsym(libasound,"snd_pcm_hw_params_set_format"))) return 1;
+	if (!(alsa_pcm_hw_params_set_rate_near = (int (*)(snd_pcm_t *, snd_pcm_hw_params_t *, unsigned int *, int *))
+						 dlsym(libasound,"snd_pcm_hw_params_set_rate_near"))) return 1;
+	if (!(alsa_pcm_hw_params_set_channels_near = (int (*)(snd_pcm_t *, snd_pcm_hw_params_t *, unsigned int *))
+						 dlsym(libasound,"snd_pcm_hw_params_set_channels_near"))) return 1;
+	if (!(alsa_pcm_hw_params_set_buffer_time_near = (int (*)(snd_pcm_t *, snd_pcm_hw_params_t *, unsigned int *, int *))
+						 dlsym(libasound,"snd_pcm_hw_params_set_buffer_time_near"))) return 1;
+	if (!(alsa_pcm_hw_params_set_period_time_near = (int (*)(snd_pcm_t *, snd_pcm_hw_params_t *, unsigned int *, int *))
+						 dlsym(libasound,"snd_pcm_hw_params_set_period_time_near"))) return 1;
+	if (!(alsa_pcm_hw_params_get_buffer_size = (int (*)(const snd_pcm_hw_params_t *, snd_pcm_uframes_t *))
+						 dlsym(libasound,"snd_pcm_hw_params_get_buffer_size"))) return 1;
+	if (!(alsa_pcm_hw_params_get_period_size = (int (*)(const snd_pcm_hw_params_t *, snd_pcm_uframes_t *, int *))
+						 dlsym(libasound,"snd_pcm_hw_params_get_period_size"))) return 1;
 	if (!(alsa_pcm_open = (int (*)(snd_pcm_t**, const char *, int, int))
 						 dlsym(libasound,"snd_pcm_open"))) return 1;
 	if (!(alsa_pcm_close = (int (*)(snd_pcm_t*))
@@ -155,9 +194,17 @@ static void ALSA_Unlink(void)
 	alsa_strerror = NULL;
 	alsa_pcm_resume = NULL;
 	alsa_pcm_prepare = NULL;
-	alsa_pcm_set_params = NULL;
-	alsa_pcm_get_params = NULL;
 	alsa_pcm_hw_params_any = NULL;
+	alsa_pcm_hw_params = NULL;
+	alsa_pcm_hw_params_current = NULL;
+	alsa_pcm_hw_params_set_access = NULL;
+	alsa_pcm_hw_params_set_format = NULL;
+	alsa_pcm_hw_params_set_rate_near = NULL;
+	alsa_pcm_hw_params_set_channels_near = NULL;
+	alsa_pcm_hw_params_set_buffer_time_near = NULL;
+	alsa_pcm_hw_params_set_period_time_near = NULL;
+	alsa_pcm_hw_params_get_buffer_size = NULL;
+	alsa_pcm_hw_params_get_period_size = NULL;
 	alsa_pcm_close = NULL;
 	alsa_pcm_drain = NULL;
 	alsa_pcm_drop = NULL;
@@ -204,59 +251,80 @@ static BOOL ALSA_IsThere(void)
 static int ALSA_Init_internal(void)
 {
 	snd_pcm_format_t pformat;
-	int rate, channels, err;
+	unsigned int btime = 250000;	/* 250ms */
+	unsigned int ptime = 50000;	/* 50ms */
+	snd_pcm_uframes_t psize;
+	snd_pcm_uframes_t bsize;
+	unsigned int rate, channels;
 	snd_pcm_hw_params_t * hwparams;
-	snd_pcm_sw_params_t * swparams;
-	snd_pcm_uframes_t temp_u_buffer_size,
-			  temp_u_period_size;
+	int err;
 
 	/* setup playback format structure */
 	pformat = (md_mode&DMODE_FLOAT)? SND_PCM_FORMAT_FLOAT :
 			(md_mode&DMODE_16BITS)? SND_PCM_FORMAT_S16 : SND_PCM_FORMAT_U8;
-	snd_pcm_hw_params_alloca(&hwparams);
-	snd_pcm_sw_params_alloca(&swparams);
 	channels = (md_mode&DMODE_STEREO)?2:1;
 	rate = md_mixfreq;
 
-	/* scan for appropriate sound card */
-	_mm_errno = MMERR_OPENING_AUDIO;
-
 #define MIKMOD_ALSA_DEVICE "default"
 	if ((err = alsa_pcm_open(&pcm_h, MIKMOD_ALSA_DEVICE, SND_PCM_STREAM_PLAYBACK, SND_PCM_NONBLOCK)) < 0) {
-		fprintf(stderr, "snd_pcm_open() call failed: %s\n", alsa_strerror(err));
+		_mm_errno = MMERR_OPENING_AUDIO;
 		goto END;
 	}
 
-	if (alsa_pcm_set_params(pcm_h, pformat, SND_PCM_ACCESS_RW_INTERLEAVED,
-				channels, rate, 1, 500000 /* 0.5sec */) < 0) {
+	snd_pcm_hw_params_alloca(&hwparams);
+	err = alsa_pcm_hw_params_any(pcm_h, hwparams);
+	if (err < 0) {
+		_mm_errno = MMERR_ALSA_NOCONFIG;
 		goto END;
 	}
 
+	err = alsa_pcm_hw_params_set_access(pcm_h, hwparams, SND_PCM_ACCESS_RW_INTERLEAVED);
+	if (!err) err = alsa_pcm_hw_params_set_format(pcm_h, hwparams, pformat);
+	if (!err) err = alsa_pcm_hw_params_set_rate_near(pcm_h, hwparams, &rate, NULL);
+	if (!err) err = alsa_pcm_hw_params_set_channels_near(pcm_h, hwparams, &channels);
+	if (!err) err = alsa_pcm_hw_params_set_buffer_time_near(pcm_h, hwparams, &btime, NULL);
+	if (!err) err = alsa_pcm_hw_params_set_period_time_near(pcm_h, hwparams, &ptime, NULL);
+	if (!err) err = alsa_pcm_hw_params(pcm_h, hwparams);
+	if (err < 0) {
+		_mm_errno = MMERR_ALSA_SETPARAMS;
+		goto END;
+	}
+
+	if (rate != md_mixfreq) {
+		_mm_errno = MMERR_ALSA_SETRATE;
+		goto END;
+	}
+	if (!(md_mode&DMODE_STEREO) && channels != 1) {
+		_mm_errno = MMERR_ALSA_SETCHANNELS;
+		goto END;
+	}
+	if ((md_mode&DMODE_STEREO) && channels != 2) {
+		_mm_errno = MMERR_ALSA_SETCHANNELS;
+		goto END;
+	}
+
+	err = alsa_pcm_hw_params_current(pcm_h, hwparams);
+	if (!err) err = alsa_pcm_hw_params_get_buffer_size(hwparams, &bsize);
+	if (!err) err = alsa_pcm_hw_params_get_period_size(hwparams, &psize, NULL);
+	if (err < 0) {
+		_mm_errno = MMERR_ALSA_BUFFERSIZE;
+		goto END;
+	}
+
+	period_size = psize;
 	global_frame_size = channels *
 				((md_mode&DMODE_FLOAT)? 4 : (md_mode&DMODE_16BITS)? 2 : 1);
 
-	/* choose all parameters */
-	err = alsa_pcm_hw_params_any(pcm_h, hwparams);
-	if (err < 0) {
-		fprintf(stderr, "Broken configuration for playback: no configurations available: %s\n", snd_strerror(err));
-		goto END;
-	}
-
-	err = alsa_pcm_get_params(pcm_h, &temp_u_buffer_size, &temp_u_period_size);
-	if (err < 0) {
-		fprintf(stderr, "Unable to get buffer size for playback: %s\n", alsa_strerror(err));
-		goto END;
-	}
-	period_size = temp_u_period_size;
-
 	if (!(audiobuffer=(SBYTE*)MikMod_malloc(period_size * global_frame_size))) {
-		fprintf(stderr, "Out of memory for ALSA buffer\n");
+		_mm_errno = MMERR_OUT_OF_MEMORY;
 		goto END;
 	}
 
 	/* sound device is ready to work */
-	if (!VC_Init())
+	if (!VC_Init()) {
+		enabled = 1;
 		return 0;
+	}
 END:
 	alsa_pcm_close(pcm_h);
 	pcm_h = NULL;
@@ -279,6 +347,7 @@ static int ALSA_Init(void)
 
 static void ALSA_Exit_internal(void)
 {
+	enabled = 0;
 	VC_Exit();
 	if (pcm_h) {
 		alsa_pcm_drain(pcm_h);
@@ -306,7 +375,7 @@ static int xrun_recovery(snd_pcm_t *handle, int err)
 	if (err == -EPIPE) {	/* under-run */
 		err = alsa_pcm_prepare(handle);
 		if (err < 0)
-			fprintf(stderr, "Can't recover from underrun, prepare failed: %s\n", snd_strerror(err));
+			dbgprint(stderr, "Can't recover from underrun, prepare failed: %s\n", snd_strerror(err));
 		return 0;
 	}
 	else if (err == -ESTRPIPE) {
@@ -315,7 +384,7 @@ static int xrun_recovery(snd_pcm_t *handle, int err)
 		if (err < 0) {
 			err = alsa_pcm_prepare(handle);
 			if (err < 0)
-				fprintf(stderr, "Can't recover from suspend, prepare failed: %s\n", snd_strerror(err));
+				dbgprint(stderr, "Can't recover from suspend, prepare failed: %s\n", snd_strerror(err));
 		}
 		return 0;
 	}
@@ -325,6 +394,8 @@ static int xrun_recovery(snd_pcm_t *handle, int err)
 static void ALSA_Update(void)
 {
 	int err;
+
+	if (!enabled) return;
 
 	if (bytes_written == 0 || bytes_played == bytes_written) {
 		bytes_written = VC_WriteBytes(audiobuffer,period_size * global_frame_size);
@@ -338,8 +409,9 @@ static void ALSA_Update(void)
 			continue;
 		if (err < 0) {
 			if ((err = xrun_recovery(pcm_h, err)) < 0) {
-				fprintf(stderr, "Write error: %s\n", alsa_strerror(err));
-				exit(-1);
+				_mm_errno = MMERR_ALSA_PCM_RECOVER;
+				enabled = 0;
+				dbgprint(stderr, "Write error: %s\n", alsa_strerror(err));
 			}
 			break;
 		}
@@ -353,7 +425,7 @@ static int ALSA_PlayStart(void)
 	if (err == 0)
 	    err = alsa_pcm_start(pcm_h);
 	if (err < 0) {
-		fprintf(stderr, "PCM start error: %s\n", alsa_strerror(err));
+		_mm_errno = MMERR_ALSA_PCM_START;
 		return 1;
 	}
 
@@ -375,7 +447,7 @@ static int ALSA_Reset(void)
 MIKMODAPI MDRIVER drv_alsa = {
 	NULL,
 	"ALSA",
-	"Advanced Linux Sound Architecture (ALSA) driver v1.01",
+	"Advanced Linux Sound Architecture (ALSA) driver v1.11",
 	0,255,
 	"alsa",
 	NULL,
@@ -412,4 +484,4 @@ MISSING(drv_alsa);
 
 #endif
 
-/* ex:set ts=4: */
+/* ex:set ts=8: */
